# k8s-provisions-backstage

./: .gitignore  README.md  pytest.ini  requirements.txt
app/: __init__.py  main.py
app/general/routes/: health.py
app/general/utils/: config.py
app/hooks/: __init__.py  create_org.py
app/src/: __init__.py
app/src/api/: argocd.py  git.py  vault.py
app/src/argocd/: sync.py
app/src/errors/: external_service.py
app/src/gitops/: values_writer.py
app/src/middlewares/: exception.py
app/src/models/: hooks.py  remove_check.py  resource_metadata.py  schema_to_model.py
app/src/routers/: __init__.py  generator.py  new_generator.py  provision.py  provision_handler.py  resource_handler.py  version_handler.py
app/src/schemas/: loader.py  new_loader.py  resolver.py  syncer.py  validator.py
app/src/services/: __init__.py  git.py  (+2 more)
package/: README.md  pyproject.toml
package/os4_tash/: __init__.py  base.py  errors.py
package/os4_tash/argocd/: __init__.py  api.py  service.py
package/os4_tash/fastapi/: __init__.py  app.py
package/os4_tash/fastapi/middlewares/: __init__.py  exception.py  log_request.py  time_request.py
package/os4_tash/fastapi/models/: __init__.py  handler.py
package/os4_tash/fastapi/routes/: __init__.py  metrics.py  probes.py  swagger.py
package/os4_tash/fastapi/tasks/: __init__.py  uptime.py
package/os4_tash/fastapi/utils/: __init__.py  config.py  logger.py
package/os4_tash/git/: __init__.py  api.py  service.py
package/os4_tash/vault/: __init__.py  api.py  service.py
tests/: conftest.py
tests/api/: test_generator_routes.py
(+8 files in other folders)
