[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "os4-tash"
version = "0.1.0"
description = "Async clients for interacting with Argo CD, Git, and Vault APIs"
authors = [
    { name = "Backstage Platform", email = "platform@example.com" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6.0",
    "loguru>=0.7",
    "fastapi>=0.110",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "prometheus-client>=0.16",
]

[project.urls]
Homepage = "https://example.com/os4-tash"

[tool.setuptools.packages.find]
where = ["."]
include = ["os4_tash*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"os4_tash" = ["static/**/*"]
